crates/pg_syntax/tests/snapshots/postgres_regress/join@108.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select * from (x left join y on (x1 = y1)) left join x xx(xx1,xx2)\non (x1 = xx1 and xx2 is not null);"
---
SelectStmt@0..101
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "from"
  Whitespace@13..14 " "
  Ascii40@14..15 "("
  JoinExpr@15..99
    JoinExpr@15..40
      RangeVar@15..16
        Ident@15..16 "x"
      Whitespace@16..17 " "
      Left@17..21 "left"
      Whitespace@21..22 " "
      Join@22..26 "join"
      Whitespace@26..27 " "
      RangeVar@27..28
        Ident@27..28 "y"
      Whitespace@28..29 " "
      On@29..31 "on"
      Whitespace@31..32 " "
      Ascii40@32..33 "("
      AExpr@33..40
        ColumnRef@33..35
          Ident@33..35 "x1"
        Whitespace@35..36 " "
        Ascii61@36..37 "="
        Whitespace@37..38 " "
        ColumnRef@38..40
          Ident@38..40 "y1"
    Ascii41@40..41 ")"
    Ascii41@41..42 ")"
    Whitespace@42..43 " "
    Left@43..47 "left"
    Whitespace@47..48 " "
    Join@48..52 "join"
    Whitespace@52..53 " "
    RangeVar@53..65
      Ident@53..54 "x"
      Whitespace@54..55 " "
      Alias@55..65
        Ident@55..57 "xx"
        Ascii40@57..58 "("
        Ident@58..61 "xx1"
        Ascii44@61..62 ","
        Ident@62..65 "xx2"
    Ascii41@65..66 ")"
    Newline@66..67 "\n"
    On@67..69 "on"
    Whitespace@69..70 " "
    Ascii40@70..71 "("
    BoolExpr@71..99
      AExpr@71..79
        ColumnRef@71..73
          Ident@71..73 "x1"
        Whitespace@73..74 " "
        Ascii61@74..75 "="
        Whitespace@75..76 " "
        ColumnRef@76..79
          Ident@76..79 "xx1"
      Whitespace@79..80 " "
      And@80..83 "and"
      Whitespace@83..84 " "
      NullTest@84..99
        ColumnRef@84..87
          Ident@84..87 "xx2"
        Whitespace@87..88 " "
        Is@88..90 "is"
        Whitespace@90..91 " "
        Not@91..94 "not"
        Whitespace@94..95 " "
        NullP@95..99 "null"
  Ascii41@99..100 ")"
  Ascii59@100..101 ";"

