crates/pg_syntax/tests/snapshots/postgres_regress/join@11.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO J1_TBL VALUES (0, NULL, 'zero');"
---
InsertStmt@0..44
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..18
    Ident@12..18 "J1_TBL"
  Whitespace@18..19 " "
  SelectStmt@19..42
    Values@19..25 "VALUES"
    Whitespace@25..26 " "
    Ascii40@26..27 "("
    List@27..42
      AConst@27..28
        Iconst@27..28 "0"
      Ascii44@28..29 ","
      Whitespace@29..30 " "
      AConst@30..34
        NullP@30..34 "NULL"
      Ascii44@34..35 ","
      Whitespace@35..36 " "
      AConst@36..42
        Sconst@36..42 "'zero'"
  Ascii41@42..43 ")"
  Ascii59@43..44 ";"

