crates/pg_syntax/tests/snapshots/postgres_regress/join@12.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO J1_TBL VALUES (NULL, NULL, 'null');"
---
InsertStmt@0..47
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..18
    Ident@12..18 "J1_TBL"
  Whitespace@18..19 " "
  SelectStmt@19..45
    Values@19..25 "VALUES"
    Whitespace@25..26 " "
    Ascii40@26..27 "("
    List@27..45
      AConst@27..31
        NullP@27..31 "NULL"
      Ascii44@31..32 ","
      Whitespace@32..33 " "
      AConst@33..37
        NullP@33..37 "NULL"
      Ascii44@37..38 ","
      Whitespace@38..39 " "
      AConst@39..45
        Sconst@39..45 "'null'"
  Ascii41@45..46 ")"
  Ascii59@46..47 ";"

